# omada-cli

./: AGENTS.md  Cargo.toml  LICENSE  README.md
skills/: install.sh
skills/omada/: SKILL.md
src/: auth.rs  cache.rs  config.rs  execute.rs  main.rs  model.rs  sites.rs  spec.rs
