[package]
name = "omada-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "omada"
path = "src/main.rs"

[dependencies]
anyhow = "1"
bytecheck = "0.6"
clap = { version = "4", features = ["derive"] }
dirs = "5"
openapiv3 = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rkyv = { version = "0.7", features = ["validation"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
